--- a/Python.ipynb
+++ b/Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3DXxvq2GeN3g7OAXc1MaB",
+      "authorship_tag": "ABX9TyO2kiIrW9in+nY9NJ0qkpzm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,6 +97,78 @@
             "Os pontos totais do Rodrigo são 24\n",
             "Os pontos totais de Ana são 46\n",
             "Os pontos totais de Ana e Rodrigo são 70\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Aula 3\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "AZnzXlvC6Ln4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total_de_figurinhas = int(input(\"Digite o total de figurinhas: \"))\n",
+        "numero_de_amigos = int(input(\"Digite o número de amigos: \"))\n",
+        "figurinhas_amigo = total_de_figurinhas // (numero_de_amigos + 2)\n",
+        "figurinhas_joao = 2 * figurinhas_amigo\n",
+        "figurinhas_extras = int(input(\"Digite o número de figurinhas extras: \"))\n",
+        "figurinhas_extras = figurinhas_extras  // (numero_de_amigos + 2)\n",
+        "figurinhas_joao2 = figurinhas_extras * 2\n",
+        "\n",
+        "print(f\"João recebeu {figurinhas_joao} figurinhas\")\n",
+        "print(f\"João recebeu {figurinhas_joao} figurinhas extras\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jvKnSM8V6lQm",
+        "outputId": "2dd41a18-23c3-41fd-c6e3-97dd370cc27f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Digite o total de figurinhas: 400\n"
           ]
         }
       ]
