--- a/Python.ipynb
+++ b/Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO2kiIrW9in+nY9NJ0qkpzm",
+      "authorship_tag": "ABX9TyO/jm6oCR4njN+p32rIu5iJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -88,7 +88,7 @@
         "id": "fV3Xfssj2dlj",
         "outputId": "25b2632e-e69c-4002-efc6-f7a23bb2400f"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +104,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Aula 3\n",
+        "#**Aula 3** ⛽ ♥ ⚜\n",
         "\n",
         "\n",
         "\n",
@@ -160,7 +160,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jvKnSM8V6lQm",
-        "outputId": "2dd41a18-23c3-41fd-c6e3-97dd370cc27f"
+        "outputId": "69200e28-18e6-4493-b30f-81ab528202c3"
       },
       "execution_count": null,
       "outputs": [
@@ -168,7 +168,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Digite o total de figurinhas: 400\n"
+            "Digite o total de figurinhas: 0\n"
           ]
         }
       ]
