--- a/Python.ipynb
+++ b/Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO/jm6oCR4njN+p32rIu5iJ",
+      "authorship_tag": "ABX9TyPJW//ixLERxUBzYLG9Fsyw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Aula 1\n"
+        "#**Aula 1** ☁: ☪ 🎱\n",
+        "\n"
       ],
       "metadata": {
         "id": "Sjcmj-Gqzc8i"
@@ -62,7 +63,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Aula 2"
+        "#**Aula 2** ⚖ ⚰ ❄"
       ],
       "metadata": {
         "id": "YDBrjniu2WLt"
@@ -156,22 +157,67 @@
         "print(f\"João recebeu {figurinhas_joao} figurinhas extras\")\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jvKnSM8V6lQm",
-        "outputId": "69200e28-18e6-4493-b30f-81ab528202c3"
+        "id": "jvKnSM8V6lQm"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Digite o total de figurinhas: 0\n"
-          ]
-        }
-      ]
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Aula 4 ** ⛳ ⚜ ✴"
+      ],
+      "metadata": {
+        "id": "ogifm5ZV63hc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "P = int(input(\"Digite a posição da porta P (0 ou 1): \"))\n",
+        "R = int(input(\"Digite a posição da porta R (0 ou 1): \"))\n",
+        "if P == 0:\n",
+        "    print(\"C\")\n",
+        "elif R == 1:\n",
+        "    print(\"A\")\n",
+        "else:"
+      ],
+      "metadata": {
+        "id": "TuDvjrqm7RDH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Aula 5- Cálculo de IMC** ⚽ 🦇 🐜"
+      ],
+      "metadata": {
+        "id": "mVW8FWrC7eKY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "peso = float(input(\"Digite seu peso (em kg): \"))\n",
+        "altura = float(input(\"Digite sua altura (em metros): \"))\n",
+        "imc = peso / (altura ** 2)\n",
+        "print(f\"\\nSeu IMC é: {imc:.2f}\")\n",
+        "if imc < 18.5:\n",
+        "    print(\"Você está abaixo do peso.\")\n",
+        "elif 18.5 <= imc < 25:\n",
+        "    print(\"Você está no peso ideal.\")\n",
+        "elif 25 <= imc < 30:\n",
+        "    print(\"Você está com sobrepeso.\")\n",
+        "else:\n",
+        "    print(\"Você está acima do peso.\")\n"
+      ],
+      "metadata": {
+        "id": "vSwlp_7I7z3e"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
