--- a/python.ipynb
+++ b/python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOsxDPVD2LODFwq1S+YG3g8",
+      "authorship_tag": "ABX9TyOl1Io5974M30xWIHMAChV7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -240,6 +240,32 @@
       ],
       "metadata": {
         "id": "XS9qouATBTBI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Aula 7-Idade🫀** ☘ 🧠"
+      ],
+      "metadata": {
+        "id": "orgW2jcPCxSq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calcula_idade_maior(idade_monica, idade_filho1, idade_filho2):\n",
+        "idade_filho3 = idade_monica - idade_filho1 - idade_filho2\n",
+        "idade_maxima = max(idade_filho1, idade_filho2, idade_filho3)\n",
+        "return idade_filho3, idade_maxima\n",
+        "resultado = calcula_idade_maior(68, 12, 30)\n",
+        "print(resultado)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "NHXlBaf7D6b8"
       },
       "execution_count": null,
       "outputs": []
