--- a/python.ipynb
+++ b/python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOl1Io5974M30xWIHMAChV7",
+      "authorship_tag": "ABX9TyOVpTYY2j++Vf4BQg6+wQg3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -239,10 +239,32 @@
         "\n"
       ],
       "metadata": {
-        "id": "XS9qouATBTBI"
+        "id": "XS9qouATBTBI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e7d900e9-fc79-4fe2-f54c-df984f448426"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número para ver sua tabuada: 4\n",
+            "4 x 1 = 4\n",
+            "4 x 2 = 8\n",
+            "4 x 3 = 12\n",
+            "4 x 4 = 16\n",
+            "4 x 5 = 20\n",
+            "4 x 6 = 24\n",
+            "4 x 7 = 28\n",
+            "4 x 8 = 32\n",
+            "4 x 9 = 36\n",
+            "4 x 10 = 40\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -265,10 +287,72 @@
         "\n"
       ],
       "metadata": {
-        "id": "NHXlBaf7D6b8"
+        "id": "NHXlBaf7D6b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "outputId": "1998392a-1f24-4805-ccc0-e9aa70dc7719"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "expected an indented block after function definition on line 1 (ipython-input-2948980883.py, line 2)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-2948980883.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    idade_filho3 = idade_monica - idade_filho1 - idade_filho2\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after function definition on line 1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Aula 8** ✈ ❤ ☪"
+      ],
+      "metadata": {
+        "id": "_Aj13W0aDhOf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Sou seu assistente virtual  \\n\")\n",
+        "nome = input(\"Digite sue nome: \")\n",
+        "print(f\"Olá {nome},em que posso ajudar?\")\n",
+        "resposta = input(\"Qual assunto você deseja tratar? Matemática, Python ou Javascript: \").lower()\n",
+        "if resposta==\"python\":\n",
+        "  print(\"Ótimo, vamos falar sobre Python!\")\n",
+        "elif resposta==\"matemática\":\n",
+        "  print(\"Perfeito, vamos resolver umas questões de matemática!\")\n",
+        "elif resposta==\"javascript\":\n",
+        "  print(\"Que legal, vamos conversar sobre javascript!\")\n",
+        "else:\n",
+        "  print(\"Hum, não sei falar sobre esse assunto \")\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H7b2jK-fEVeA",
+        "outputId": "719c5210-db2e-4425-911a-c4890f3634f2"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sou seu assistente virtual  \n",
+            "\n",
+            "Digite sue nome: julias\n",
+            "Olá julias,em que posso ajudar?\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
